--- a/src/sections/explore/explore.css
+++ b/src/sections/explore/explore.css
@@ -14,7 +14,6 @@
   flex-wrap: wrap;
   justify-content: space-around;
   gap: 30px;
-
 }
 
 .product-item {
@@ -52,4 +51,45 @@
     -ms-transform: scale(1.05);
     -o-transform: scale(1.05);
 }
+
+.load-more-button{
+  font-size: 14px;
+  font-family: var(--secondary-font);
+  padding: 0.5rem 1.5rem;
+  margin-top: 40px;
+  background-color: transparent;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border: 0.5px solid #212121;
+  outline: none;
+  overflow: hidden;
+}
+
+.load-more-button:hover{
+  background-color: #eeeeee;
+}
   
+@media(max-width: 1100px){
+  .product-item {
+    flex-basis: calc(50% - 20px); 
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media(max-width: 760px){
+  .explore-wrapper {
+    padding: 5% 5%;
+  }
+
+  .product-item {
+    flex-basis: calc(100% - 20px); 
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+  }
+}
