--- a/src/sections/header/header.css
+++ b/src/sections/header/header.css
@@ -1,89 +1,86 @@
-.wrapper{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    /* background-color: var(--bg-color); */
-    background-color: #000;
-    height: 100vh;
+.wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  /* background-color: var(--bg-color); */
+  background-color: #000;
+  height: 100vh;
 }
 
-.navbar{
-    z-index: 2;
-    padding: 10px 15% 10px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    font-family: var(--font-logo);
-    font-size: 30px;
-    font-weight: 300;
+.navbar {
+  z-index: 2;
+  padding: 10px 15% 10px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  font-family: var(--font-logo);
+  font-size: 30px;
+  font-weight: 300;
 }
 
-c{
-    list-style: none;
-    margin: 0;
-    
-  }
+c {
+  list-style: none;
+  margin: 0;
+}
 
-  .nav-links li {
-    display: inline-block;
-  }
+.nav-links li {
+  display: inline-block;
+}
 
-  .nav-links-mobile li{
-    display: flex;
-    flex-direction: column;
-  }
+.nav-links-mobile li {
+  display: flex;
+  flex-direction: column;
+}
 
-  .nav-links-mobile li{
-    gap: 10px;
-  }
+.nav-links-mobile li {
+  gap: 10px;
+}
 
-  .nav-links-mobile a{
-    margin-left: 30px;
-    text-decoration: none;
-    color: #ffffff;
-    font-size: 13px; 
-    font-family: var(--secondary-font);
-    font-weight: bold; 
-    text-transform: uppercase;
-    font-weight: 500;
-    padding: 8px 20px;
-    border-radius: 100px;
-    -webkit-border-radius: 100px;
-    -moz-border-radius: 100px;
-    -ms-border-radius: 100px;
-    -o-border-radius: 100px;
-  }
-  
-  .nav-links a {
-    margin-left: 30px;
-    text-decoration: none;
-    color: #fff;
-    font-size: 13px; 
-    font-family: var(--secondary-font);
-    font-weight: bold; 
-    text-transform: uppercase;
-    font-weight: 500;
-    padding: 8px 20px;
-    border-radius: 100px;;
-  }
-  
+.nav-links-mobile a {
+  margin-left: 30px;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 13px;
+  font-family: var(--secondary-font);
+  font-weight: bold;
+  text-transform: uppercase;
+  font-weight: 500;
+  padding: 8px 20px;
+  border-radius: 100px;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  -ms-border-radius: 100px;
+  -o-border-radius: 100px;
+}
 
-.logo h2{
+.nav-links a {
+  margin-left: 30px;
+  text-decoration: none;
+  color: #fff;
+  font-size: 13px;
+  font-family: var(--secondary-font);
+  font-weight: bold;
+  text-transform: uppercase;
+  font-weight: 500;
+  padding: 8px 20px;
+  border-radius: 100px;
+}
+
+.logo h2 {
   color: #fff;
   font-weight: normal;
   letter-spacing: 3px;
 }
 
-.logo a{
+.logo a {
   text-decoration: none;
 }
-  
 
-.container{
+.container {
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -92,7 +89,8 @@ c{
   position: relative;
 }
 
-.left-aside, .right-aside{
+.left-aside,
+.right-aside {
   width: 5%;
   height: 100%;
   background-color: var(--bg-color);
@@ -105,14 +103,14 @@ c{
   position: fixed;
 }
 
-.left-rectangle{
+.left-rectangle {
   width: 30px;
   height: 100px;
   background-color: #c0392b;
   opacity: 0.2;
 }
 
-.right-aside{
+.right-aside {
   right: 0;
   width: 5%;
   height: 100%;
@@ -125,7 +123,7 @@ c{
   position: fixed;
 }
 
-#soundButton{
+#soundButton {
   position: absolute;
   right: 90px;
   bottom: 200px;
@@ -133,7 +131,7 @@ c{
   cursor: pointer;
 }
 
-.left-aside a{
+.left-aside a {
   font-size: 14px;
   text-decoration: none;
   font-weight: 500;
@@ -142,15 +140,14 @@ c{
   rotate: -90deg;
 }
 
-
-.left-aside img{
+.left-aside img {
   width: 14px;
   rotate: 90deg;
   margin-top: 20px;
   margin-left: 3px;
 }
 
-.right-aside a{
+.right-aside a {
   font-size: 14px;
   text-decoration: none;
   font-weight: 500;
@@ -159,20 +156,20 @@ c{
   rotate: 90deg;
 }
 
-.center-content{
+.center-content {
   max-width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
- position: relative;
+  position: relative;
 }
 
-.center-content video{
+.center-content video {
   min-height: 100vh;
 }
 
-.center-content .dark-layer{
+.center-content .dark-layer {
   position: absolute;
   width: 100%;
   height: 1000%;
@@ -182,18 +179,16 @@ c{
   opacity: 0.6;
 }
 
-.center-content .story{
+.center-content .story {
   position: absolute;
   width: 100%;
   padding: 22% 15% 15%;
 }
 
-.center-content .story p, h1{
+.center-content .story p,
+h1 {
   color: #fff;
 }
-
-
-
 
 .gpt3__navbar-menu_container {
   display: flex;
@@ -217,13 +212,14 @@ c{
   box-shadow: 0 0 5 rgb(0, 0, 0, 0.2);
 }
 
-.navbar-menu{
+.navbar-menu {
   display: none;
 }
+
 /**************************Responsive starts here******************************/
 
-@media(max-width: 1300px){
-  .navbar{
+@media (max-width: 1300px) {
+  .navbar {
     z-index: 2;
     padding: 10px 10% 10px;
     width: 100%;
@@ -234,23 +230,20 @@ c{
     font-family: var(--font-logo);
     font-size: 30px;
     font-weight: 300;
+  }
+
+  .center-content .story {
+    position: absolute;
+    width: 100%;
+    padding: 22% 10% 10%;
+  }
 }
 
-.center-content .story{
-  position: absolute;
-  width: 100%;
-  padding: 22% 10% 10%;
-}
-}
-
-
-
-@media(max-width: 760px){
-
-  .navbar-menu{
+@media (max-width: 760px) {
+  .navbar-menu {
     display: block;
   }
-  .navbar{
+  .navbar {
     z-index: 2;
     padding: 10px 5% 10px;
     width: 100%;
@@ -261,32 +254,29 @@ c{
     font-family: var(--font-logo);
     font-size: 30px;
     font-weight: 300;
-}
+  }
 
-.nav-links{
-  display: none;
-}
+  .nav-links {
+    display: none;
+  }
 
-.center-content .story{
-  position: absolute;
-  width: 100%;
-  padding: 5%;
-  margin-top: 25%;
-}
+  .center-content .story {
+    position: absolute;
+    width: 100%;
+    padding: 5%;
+    margin-top: 25%;
+  }
 
-.logo h2{
-  color: #fff;
-  font-weight: normal;
-  font-size: 30px;
-  letter-spacing: 3px;
-}
-.center-content p{
-  font-size: 16px;  
-}
-.center-content h1{
-  font-size: 18px;  
-}
-
-
-
+  .logo h2 {
+    color: #fff;
+    font-weight: normal;
+    font-size: 30px;
+    letter-spacing: 3px;
+  }
+  .center-content p {
+    font-size: 16px;
+  }
+  .center-content h1 {
+    font-size: 18px;
+  }
 }
