--- a/src/sections/explore/explore.css
+++ b/src/sections/explore/explore.css
@@ -9,11 +9,20 @@
   padding: 5% 10%;
 }
 
+.header-text{
+  font-size: 20px;
+  font-family: var(--secondary-font);
+  text-transform: uppercase;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+
 .products {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   gap: 30px;
+  
 }
 
 .product-item {
@@ -23,6 +32,7 @@
   margin-top: 30px;
   display: flex;
   flex-direction: column;
+  
 }
 
 .product-item h5{
@@ -42,14 +52,17 @@
     -ms-transition: transform 0.4s ease;
     -o-transition: transform 0.4s ease;
     cursor: pointer;
+    -webkit-box-shadow: 0px 8px 24px -2px rgba(66, 68, 90, 0.19);
+    -moz-box-shadow: 0px 8px 24px -2px rgba(66, 68, 90, 0.19);
+    box-shadow: 0px 8px 24px -2px rgba(66, 68, 90, 0.19);
 }
   
   .product-item img:hover {
-    transform: scale(1.05);
-    -webkit-transform: scale(1.05);
-    -moz-transform: scale(1.05);
-    -ms-transform: scale(1.05);
-    -o-transform: scale(1.05);
+    transform: scale(1.03);
+    -webkit-transform: scale(1.03);
+    -moz-transform: scale(1.03);
+    -ms-transform: scale(1.03);
+    -o-transform: scale(1.03);
 }
 
 .load-more-button{
