--- a/src/sections/contact/contact.css
+++ b/src/sections/contact/contact.css
@@ -61,6 +61,7 @@
     -moz-border-radius: 100px;
     -ms-border-radius: 100px;
     -o-border-radius: 100px;
+    backdrop-filter: blur(10px);
 }
 
 @media (max-width: 760px){
