--- a/src/sections/explore/explore.css
+++ b/src/sections/explore/explore.css
@@ -10,11 +10,10 @@
 }
 
 .header-text{
-  font-size: 20px;
+  font-size: 16px;
   font-family: var(--secondary-font);
-  text-transform: uppercase;
   font-weight: 500;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .products {
@@ -52,9 +51,9 @@
     -ms-transition: transform 0.4s ease;
     -o-transition: transform 0.4s ease;
     cursor: pointer;
-    -webkit-box-shadow: 0px 8px 24px -2px rgba(66, 68, 90, 0.19);
-    -moz-box-shadow: 0px 8px 24px -2px rgba(66, 68, 90, 0.19);
-    box-shadow: 0px 8px 24px -2px rgba(66, 68, 90, 0.19);
+    -webkit-box-shadow: 0px 0px 18px -13px rgba(66, 68, 90, 1);
+-moz-box-shadow: 0px 0px 18px -13px rgba(66, 68, 90, 1);
+box-shadow: 0px 0px 18px -13px rgba(66, 68, 90, 1);
 }
   
   .product-item img:hover {
@@ -71,14 +70,15 @@
   padding: 0.5rem 1.5rem;
   margin-top: 40px;
   background-color: transparent;
-  border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-  border: 0.5px solid #212121;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+  border: 0.5px solid #838383;
   outline: none;
   overflow: hidden;
+  cursor: pointer;
 }
 
 .load-more-button:hover{
