--- a/src/sections/topToButton/toptobutton.css
+++ b/src/sections/topToButton/toptobutton.css
@@ -13,7 +13,6 @@
     padding: 0;
     width: 40px;
     height: 40px;
-    /* border: 0.3px solid black; */
     border-radius: 50px;
     -moz-border-radius: 50px;
     -ms-border-radius: 50px;
@@ -25,4 +24,11 @@
   #myBtn img {
     width: 100%;
     height: 100%;
+  }
+
+
+  @media(max-width: 760px){
+    #myBtn{
+        display: none;
+    }
   }
